package polar_data;
import "types.proto";
import "structures.proto";

message PbStravaSegmentPort {
	required .PbLocation left_location = 1 ;
	required .PbLocation right_location = 2 ;
}

message PbRoutePoint {
	required sint32 x_offset = 1 ;
	required sint32 y_offset = 2 ;
	optional uint32 time_offset = 3 ;
	optional sint32 z_offset = 4 ;
}

message PbPlannedRoute {
	required .PbRouteId route_id = 1 ;
	required .PbOneLineText name = 2 ;
	optional float length = 3 ;
	optional .PbLocation start_location = 4 ;
	optional float start_altitude = 5 ;
	repeated .polar_data.PbRoutePoint point = 6 ;
	optional .polar_data.PbStravaSegmentPort segment_start_port = 7 ;
	optional .polar_data.PbStravaSegmentPort segment_end_port = 8 ;
}
