package polar_data;
import "types.proto";
import "structures.proto";
import "exercise_phases.proto";

message PbSteadyRacePace {
	required .PbDuration duration = 1 ;
	required float distance = 2 ;
}

message PbExerciseTarget {
	required .PbExerciseTargetType target_type = 1 ;
	optional .PbSportIdentifier sport_id = 2 ;
	optional .PbVolumeTarget volume_target = 3 ;
	optional .polar_data.PbPhases phases = 4 ;
	optional .PbRouteId route = 5 ;
	optional .polar_data.PbSteadyRacePace steady_race_pace = 6 ;
	optional .PbStravaSegmentTarget strava_segment_target = 7 ;
}

message PbTrainingSessionTarget {
	required .PbOneLineText name = 2 ;
	optional .PbSportIdentifier sport_id = 3 ;
	optional .PbLocalDateTime start_time = 4 ;
	optional .PbMultiLineText description = 5 ;
	repeated .polar_data.PbExerciseTarget exercise_target = 6 ;
	optional bool target_done = 7 ;
	optional .PbDuration duration = 8 ;
	optional .PbTrainingProgramId training_program_id = 9 ;
	optional .PbEventId event_id = 10 ;
}
